# featherweight

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  FTW-Setup.vi  FTW.lvproj  Featherweight.lvproj  README.md
.appveyor/: lv_epilog.h
.appveyor/cintools/: ILVDataInterface.h  labviewv.lib  lv_prolog.h  platdefines.h
.ci/cintools/: extcode.h  fundtypes.h  hosttype.h  labviewv.lib  lv_epilog.h  lv_prolog.h  platdefines.h
Actor/: FTW-Actor.lvlib  Featherweight-Actor.lvproj
Actor/Builds/: FTW-Actor.lvlibp
Actor/Connector/: FTW-ActorConnector.lvclass  FTW-Connector-Ask.vi  FTW-Connector-Close.vi  FTW-Connector-Connect.vi  FTW-Connector-LaunchActor.vi  FTW-Connector-SendPoisonPill.vi  FTW-Connector-SpawnNewActor.vi  FTW-Connector-Tell.vi
Actor/Endpoint/: FTW-Endpoint-Ask.vi  FTW-Endpoint-Bind-Async.vi  FTW-Endpoint-Bind.vi  FTW-Endpoint-Connect.vi  FTW-Endpoint-Destroy.vi  FTW-Endpoint-IncomingRequestProxy-Receive.vi  FTW-Endpoint-IncomingRequestProxy-Relay.vi  FTW-Endpoint-IncomingRequestProxy-Start.vi  FTW-Endpoint-IncomingRequestProxy-Worker.vi  FTW-Endpoint-Initialize.vi  FTW-Endpoint-Multipart-Ask.vi  FTW-Endpoint-Multipart-Receive.vi  FTW-Endpoint-Multipart-Reply.vi  FTW-Endpoint-Multipart-Tell.vi  FTW-Endpoint-Receive.vi  FTW-Endpoint-Tell.vi  FTW-Endpoint.lvclass
Actor/Ether/: FTW-Ether-Address-Build.vi  FTW-Ether-Address-RandomEphemeral.vi  FTW-Ether-Address-Validate.vi  FTW-Ether-Construct.vi  FTW-Ether-CreateClient.vi  FTW-Ether-CreateEndpoint.vi  FTW-Ether-CreateEphemeralEndpoint.vi  FTW-Ether-CreateServer.vi  FTW-Ether-Destroy.vi  FTW-Ether-EndpointType.ctl  FTW-Ether-Instance.vi  FTW-Ether-MessageTransportScheme.ctl  FTW-Ether-NewLoggerConnection.vi  FTW-Ether.lvclass
Actor/EventLogger/: FTW-Logger-AddRecord.vi  FTW-Logger-Connect.vi  FTW-Logger-Launch.vi  FTW-Logger-Level.ctl  FTW-Logger-SerializeEvent.vi  FTW-Logger.lvclass
Actor/Instance/: FTW-Actor-AddJob-Next.vi  FTW-Actor-BeginShutdownSequence.vi  FTW-Actor-CheckShutdown.vi  FTW-Actor-Destroy.vi  FTW-Actor-GetNextJob.vi  FTW-Actor-HandleError.vi  FTW-Actor-Initialize.vi  FTW-Actor-Initialized.vi  FTW-Actor-Log-Error.vi  FTW-Actor-Log-Event.vi  FTW-Actor-Log-FrameworkEvent.vi  FTW-Actor-UnknownJob.vi  FTW-ActorInstance.lvclass  FTW-ActorTemplate.vit
Actor/JobSequencer/: FTW-JobSequencer.lvclass  FTW-SEQ-AddLast.vi  FTW-SEQ-AddNext.vi  FTW-SEQ-Construct.vi  FTW-SEQ-Current.vi  FTW-SEQ-Destroy.vi  FTW-SEQ-GetNextStep.vi
Actor/Utility/: FTW-Actor-Address.ctl  FTW-Actor-Configuration.ctl  FTW-Actor-DynamicLaunchOptions.vi
Actor/ZMQ/: FTW-Endpoint-Bind.vi  FTW-Endpoint-Connect.vi  FTW-Endpoint-Construct-ZMQ.vi  FTW-Endpoint-Destroy.vi  FTW-Endpoint-IncomingRequestProxy-Receive.vi  FTW-Endpoint-Multipart-Ask.vi  FTW-Endpoint-Multipart-Receive.vi  FTW-Endpoint-Multipart-Reply.vi  FTW-Endpoint-Multipart-Tell.vi  FTW-Endpoint-ZMQ.lvclass  FTW-Endpoint-ZMQCore-Receive-Multipart.vi  FTW-Endpoint-ZMQCore-SendMultipartMessage.vi  FTW-ZMQ-LibraryFilepath.vi  FTW-ZMQ-LibraryReturnValue.vi  FTW-ZMQ-SocketType.ctl
Actor/docs/: Sequence Diagram - Spawning a New Actor.html
Actor/src/: FTW-Actor.lvlib
Actor/test/: FTW-StressTest-Endpoint-CreateDestroy.vi
Core/: Featherweight-Core.lvproj
Core/Application/: FTW-App-StringToVersion.vi  FTW-App-StringVersionToString.vi  FTW-App-VersionToString.vi
Core/Collection/: FTW-Collection-KeyValuePair.ctl
Core/Container/: FTW-Container-AddOrReplace.vi  FTW-Container-Construct-IR.vi  FTW-Container-Construct.vi  FTW-Container-Destroy.vi  FTW-Container-Initialize-IR.vi  FTW-Container-Initialize.vi  FTW-Container-Load-JSON.vi  FTW-Container-Merge.vi  FTW-Container-QueryValue.vi  (+13 more)
Examples/: FTW-Benchmark-JSON.vi  FTW-Benchmark-MessageTransports.vi  FTW-Example-Actors.vi  FTW-Example-Endpoints.vi  FTW-Example-EventLogger.vi  FTW-Example-SQLite.vi  FTW-Example-TransferClient.vi
Utilities/: FTW-DevUtil-CreateNewActor.vi  FTW-DevUtil-FrontPanelCleanup.vi  FTW-DevUtil-RegisterProbes.vi
codegen/: FTW-CodeGen-ChooseImplementation.vi  FTW-CodeGen-CleanUpWire.vi  FTW-CodeGen-CleanUpWires.vi  FTW-CodeGen-FindGObject.vi  FTW-CodeGen-FindGObjectTaggedForScripting.vi  FTW-CodeGen-FindGObjects-Callback.vi  FTW-CodeGen-FindGObjects.vi  FTW-CodeGen-FindTerm-Adaptive.vi  FTW-CodeGen-FindTerminalByID.vi  FTW-CodeGen-FindTerminalTypeByID.vi  FTW-CodeGen-GetErrors.vi  FTW-CodeGen-GetTerminals.vi  FTW-CodeGen-GetTypeInfo.vi  FTW-CodeGen-GetTypeInfoRemote.vi  FTW-CodeGen-InitializeCache.vi  FTW-CodeGen-OneGObjectOrNone.vi  FTW-CodeGen-RegenerateAfterAdapt.vi  FTW-CodeGen-RelinkTerminals.vi  FTW-CodeGen-SetConstantValue.vi  FTW-CodeGen-TerminalTypeAdaption.vi  FTW-CodeGen-TraverseGObjects.vi  FTW-CodeGen-UpdateCodegenCache.vi  FTW-CodeGen-XNodeAdaptiveTerminal-Controller.ctl  FTW-CodeGen-XNodeAdaptiveTerminal.ctl  FTW-CodeGen-XNodeCommonState.ctl  FTW-CodeGen-XNodeReply.vi  FTW-CodeGen-XNodeReplyType.ctl  FTW-CodeGen-XNodeUpdateState.vi  FTW-CodeGen.lvproj
contrib/: README.md
deploy/: README.md
ftw/: FTW-Test.lvproj  FTW.lvproj
kernel/: .gitignore  .gitmodules  .travis.install.sh  .travis.yml  CMakeLists.txt  Makefile.am  README.md  appveyor.yml  autogen.sh  build-ftw.sh  configure.ac  ftw.c  ftw.h  ftw_libuv.c  ftw_libuv.h  ifl.sh
kernel/framework/: ftw_framework.c  ftw_framework.h
kernel/jansson/: Makefile.am  ftw_json.c  ftw_json.h
kernel/labview/: fundtypes.h  hosttype.h
kernel/nanomsg/: Makefile.am  ftw_nanomsg.c  ftw_nanomsg.h
kernel/pcre/: Makefile.am  ftw_pcre.c  ftw_pcre.h
kernel/pcre/upstream/: CMakeLists.txt  Makefile.am  configure.ac
kernel/sqlite/: Makefile.am  ftw_sqlite.c  ftw_sqlite.h
lib/: FTW-KernelFilepath.vi  README.md  libftw.so.0.7.0  libftw.so.0.8.0
links/: README.md
sandbox/: FTW-Example-TransferClient.vi
templates/: FTW-ActorTemplate.vi
test/: FTW-Test.lvproj  README.md
tests/: FTW-Test.json  FTW-Test.vi
utils/: FTW-DevUtil-CreateNewActor.vi  FTW-DevUtil-FrontPanelCleanup.vi  FTW-DevUtil-RegisterProbes.vi  FTW-DevUtil-VIDetails.vi  FTW-DevUtil-XNode-AddItem.vi  FTW-DevUtil-XNode-SetProperties.vi  FTW-WebService-CreateINI.vi
(+1934 files in other folders)
